feat: add auth and leaderboard
